# Kanmail

./: .babelrc  .dockerignore  .env  .eslintrc  .git-blame-ignore-revs  .gitignore  CHANGELOG.md  Dockerfile  LICENSE.md  Makefile  Procfile  Procfile-app  README.md  boot.py  docker-compose.yml  main.py  package.json  pyproject.toml  setup.cfg  webpack.config.js
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build.yml  codeql-analysis.yml  requirements.yml  stale.yml
docker/: Dockerfile
docs/: README.md  development.md  docker.md  linux.md  providers.md  server_support.md  settings.md  support.md  syncing.md
kanmail/: __init__.py  device.py  license.py  log.py  secrets.py  settings.py  update.py  version.py  window.py
kanmail/client/: boot.jsx  constants.js  keyboard.js  main.jsx  style.less  theme.js  threading.js  window.js
make/: Dockerfile-ubuntu-linux-build  Kanmail.icns  __main__.py  build_linux_client_docker.sh  clean.py  clean.sh  github-config.pyu  icon.icns  macos.py  release.py  requirements.py  settings.py  spec.j2.py  spec_mac.j2.py  util.py
pyinstaller/: Info.plist  Kanmail.icns
requirements/: base-development.in  base.in  base.pip  base.txt  development.in  development.txt  docker.txt  linux-development.txt  linux.txt  macos-development.txt  macos.txt  windows-development.txt  windows.txt
scripts/: build.py  build.sh  build_client.sh  build_docker.sh  build_macos.sh  clean.sh  dev_server.py  release.py  release.sh  run_cache_cleanup.py  run_server.py
tests/: test_app_run.py
(+166 files in other folders)
