[tool.black]
line-length = 100
target-version = ["py36"]

[tool.isort]
profile = "black"
line_length = 100
combine_as_imports = true
include_trailing_comma = true

[tool.poetry]
name = "Kanmail"
version = "0.0.0"
description = ""
authors = ["Oxygem <hello@oxygem.com>"]
license = "Kanmail EULA"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"

pywebview = "3.6.3"
PyUpdater = "4.0.0"
pyinstaller = "4.10"
dsdev-utils = "1.0.5"
cheroot = "8.3.0"
click = "8.1.3"
Flask = "2.1.3"
Flask-SQLAlchemy = "2.5.1"
SQLAlchemy = "1.3.13"
Markdown = "2.6.9"
mdx-linkify = "1.0"
dnspython = "1.15.0"
defusedxml = "0.7.0"
tld = "0.9.1"
requests = "2.25.1"
keyring = "19.2.0"
"keyrings.alt" = "3.4.0"
IMAPClient = "2.2.0"
sentry-sdk = {version = "1.1.0", extras = ["flask"]}
cffi = "1.15.0"
MarkupSafe = "2.0.1"
pyobjc-core = {version = "8.5", platform = "darwin"}
pyobjc-framework-Cocoa = {version = "8.5", platform = "darwin"}
pyobjc-framework-WebKit = {version = "8.5", platform = "darwin"}
pyobjc-framework-UserNotifications = {version = "8.5", platform = "darwin"}
PyGObject = {version = "3.36.1", platform = "linux"}
pywin32 = {version = "301", platform = "windows"}

[tool.poetry.dev-dependencies]
honcho = "1.0.1"
PyUpdater-S3-Plugin = "4.1.2"
Faker = "0.9.2"
pytest = "6.2.5"
mypy = "^0.961"
flake8 = "^4.0.1"
flake8-black = "^0.3.3"
flake8-isort = "^4.1.1"
flake8-commas = "^2.1.0"
ipython = "^8.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
